--- a/webtool/webtool/webtool.csproj
+++ b/webtool/webtool/webtool.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,24 +48,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Compressor.cs" />
-    <Compile Include="Forms\CompressorForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\CompressorForm.Designer.cs">
-      <DependentUpon>CompressorForm.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Core\CompressionTool.cs" />
+    <Compile Include="Core\DirectoryTool.cs" />
+    <Compile Include="Core\RazorTool.cs" />
+    <Compile Include="Core\VersionControlSystemTool.cs" />
+    <Compile Include="Core\WebtoolService.cs" />
     <Compile Include="Forms\RootForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\RootForm.Designer.cs">
       <DependentUpon>RootForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\WebToolModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Forms\CompressorForm.resx">
-      <DependentUpon>CompressorForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\RootForm.resx">
       <DependentUpon>RootForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -74,8 +74,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="Libs\compiler-latest\COPYING" />
-    <None Include="Libs\compiler-latest\README.md" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -85,17 +84,15 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="webtool.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Libs\compiler-latest\compiler.jar" />
-    <Content Include="Libs\compiler-latest\infocenter.js" />
     <Content Include="Libs\yuicompressor.jar" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
