--- a/webtool/webtool/webtool.csproj
+++ b/webtool/webtool/webtool.csproj
@@ -50,6 +50,8 @@
   <ItemGroup>
     <Compile Include="Core\CompressionTool.cs" />
     <Compile Include="Core\DirectoryTool.cs" />
+    <Compile Include="Core\HttpTool.cs" />
+    <Compile Include="Core\ProcessTool.cs" />
     <Compile Include="Core\RazorTool.cs" />
     <Compile Include="Core\VersionControlSystemTool.cs" />
     <Compile Include="Core\WebtoolService.cs" />
