--- a/webtool/webtool/webtool.csproj
+++ b/webtool/webtool/webtool.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Forms\RootForm.Designer.cs">
       <DependentUpon>RootForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\BuildModel.cs" />
     <Compile Include="Model\WebToolModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
